--- a/android_app/app/src/main/res/layout/fbxx/layout/fb_fc_zz.xml
+++ b/android_app/app/src/main/res/layout/fbxx/layout/fb_fc_zz.xml
@@ -6,14 +6,14 @@
         <LinearLayout style="@style/ll_fb_fc_zz_main">
 
             <LinearLayout style="@style/ll_fb_fc_zz_top">
-                <ImageView android:id="@+id/ivBACK" style="@style/iv_fb_fc_zz_back" android:src="@drawable/arrow_back_black" />
-                <TextView android:id="@+id/tvTitle" style="@style/tv_fb_fc_zz_title" android:text="整租发布" />
+                <ImageView android:id="@+id/iv_back" style="@style/iv_fb_fc_zz_back" android:src="@drawable/arrow_back_black" />
+                <TextView style="@style/tv_fb_fc_zz_title" android:text="整租发布" />
             </LinearLayout>
 
             <LinearLayout style="@style/ll_fb_head">
-                <LinearLayout style="@style/ll_fb_head_tp">
-                    <TextView android:id="@+id/tvSCZP" style="@style/tv_fb_head_sczp" />
-                    <ImageView android:id="@+id/ivSCZP" style="@style/iv_fb_head_sczp" android:src="@drawable/grzx_sczp_blue" />
+                <LinearLayout android:id="@+id/ll_fb_head_tp" style="@style/ll_fb_head_tp">
+                    <TextView android:id="@+id/tv_yhm" style="@style/tv_fb_head_sczp" />
+                    <ImageView android:id="@+id/iv_sczp" style="@style/iv_fb_head_sczp" android:src="@drawable/grzx_sczp_blue" />
                 </LinearLayout>
             </LinearLayout>
 
@@ -25,48 +25,48 @@
                 <TextView android:text="基本信息" style="@style/tv_content_middle_title" />
             </LinearLayout>
 
-            <LinearLayout android:id="@+id/ll_xq" style="@style/ll_content_middle_vertical">
+            <LinearLayout android:id="@+id/ll_zz_xqmc" style="@style/ll_content_middle_vertical">
                 <TextView android:text="小区" style="@style/tv_content_middle_vertical_text" />
-                <TextView android:id="@+id/tv_xqmc" android:text="请选择小区" style="@style/tv_content_middle_vertical_value" />
+                <TextView android:id="@+id/tv_zz_xqmc" android:text="请选择小区" style="@style/tv_content_middle_vertical_value" />
             </LinearLayout>
 
-            <LinearLayout android:id="@+id/ll_mj" style="@style/ll_content_middle_vertical">
+            <LinearLayout android:id="@+id/ll_zz_mj" style="@style/ll_content_middle_vertical">
                 <TextView android:text="面积" style="@style/tv_content_middle_vertical_text" />
-                <TextView android:id="@+id/tv_mj" android:text="请填写面积" style="@style/tv_content_middle_vertical_value" />
+                <TextView android:id="@+id/tv_zz_mj" android:text="请填写面积" style="@style/tv_content_middle_vertical_value" />
             </LinearLayout>
 
             <LinearLayout style="@style/ll_content_middle_horizontal">
-                <LinearLayout android:id="@+id/ll_ts" style="@style/ll_content_middle_vertical" android:layout_width="136dp">
+                <LinearLayout android:id="@+id/ll_zz_ts" style="@style/ll_content_middle_vertical" android:layout_width="136dp">
                     <TextView style="@style/tv_content_middle_vertical_text" android:text="厅室" />
-                    <TextView android:id="@+id/tv_ts" style="@style/tv_content_middle_vertical_value" android:text="请选择" />
+                    <TextView android:id="@+id/tv_zz_ts" style="@style/tv_content_middle_vertical_value" android:text="请选择" />
                 </LinearLayout>
                 <LinearLayout style="@style/ll_content_middle_vertical_split">
 
                 </LinearLayout>
-                <LinearLayout android:id="@+id/ll_cx" style="@style/ll_content_middle_vertical" android:layout_width="136dp">
+                <LinearLayout android:id="@+id/ll_zz_cx" style="@style/ll_content_middle_vertical" android:layout_width="136dp">
                     <TextView style="@style/tv_content_middle_vertical_text" android:text="朝向" />
-                    <TextView android:id="@+id/tv_cx" style="@style/tv_content_middle_vertical_value" android:text="请选择" />
+                    <TextView android:id="@+id/tv_zz_cx" style="@style/tv_content_middle_vertical_value" android:text="请选择" />
                 </LinearLayout>
                 <LinearLayout style="@style/ll_content_middle_vertical_split">
 
                 </LinearLayout>
-                <LinearLayout android:id="@+id/ll_lc" style="@style/ll_content_middle_vertical" android:layout_width="136dp">
+                <LinearLayout android:id="@+id/ll_zz_lc" style="@style/ll_content_middle_vertical" android:layout_width="136dp">
                     <TextView style="@style/tv_content_middle_vertical_text" android:text="楼层" />
-                    <TextView android:id="@+id/tv_lc" style="@style/tv_content_middle_vertical_value" android:text="请选择" />
+                    <TextView android:id="@+id/tv_zz_lc" style="@style/tv_content_middle_vertical_value" android:text="请选择" />
                 </LinearLayout>
             </LinearLayout>
 
             <LinearLayout style="@style/ll_content_middle_horizontal">
-                <LinearLayout android:id="@+id/ll_cw" style="@style/ll_content_middle_vertical" android:layout_width="204dp">
+                <LinearLayout android:id="@+id/ll_zz_cw" style="@style/ll_content_middle_vertical" android:layout_width="204dp">
                     <TextView style="@style/tv_content_middle_vertical_text" android:text="车位" />
-                    <TextView android:id="@+id/tv_cw" style="@style/tv_content_middle_vertical_value" android:text="请选择" />
+                    <TextView android:id="@+id/tv_zz_cw" style="@style/tv_content_middle_vertical_value" android:text="请选择" />
                 </LinearLayout>
                 <LinearLayout style="@style/ll_content_middle_vertical_split">
 
                 </LinearLayout>
-                <LinearLayout android:id="@+id/ll_dt" style="@style/ll_content_middle_vertical" android:layout_width="204dp">
+                <LinearLayout android:id="@+id/ll_zz_dt" style="@style/ll_content_middle_vertical" android:layout_width="204dp">
                     <TextView style="@style/tv_content_middle_vertical_text" android:text="电梯" />
-                    <TextView android:id="@+id/tv_dt" style="@style/tv_content_middle_vertical_value" android:text="请选择" />
+                    <TextView android:id="@+id/tv_zz_dt" style="@style/tv_content_middle_vertical_value" android:text="请选择" />
                 </LinearLayout>
             </LinearLayout>
 
@@ -78,17 +78,17 @@
                 <TextView android:text="租金详情" style="@style/tv_content_middle_title" />
             </LinearLayout>
 
-            <LinearLayout android:id="@+id/ll_zj" style="@style/ll_content_middle_vertical">
+            <LinearLayout android:id="@+id/ll_zz_zj" style="@style/ll_content_middle_vertical">
                 <TextView style="@style/tv_content_middle_vertical_text" android:text="月租金" />
                 <LinearLayout style="@style/ll_content_middle_horizontal">
-                    <TextView style="@style/tv_content_middle_vertical_value" android:id="@+id/tv_zj" android:layout_width="100dp" android:layout_marginLeft="142dp" android:text="请填写" />
-                    <TextView style="@style/tv_content_middle_vertical_yffs" android:id="@+id/tv_yffs" android:text="押一付三" />
+                    <TextView style="@style/tv_content_middle_vertical_value" android:id="@+id/tv_zz_zj" android:layout_width="100dp" android:layout_marginLeft="142dp" android:text="请填写" />
+                    <TextView style="@style/tv_content_middle_vertical_yffs" android:id="@+id/tv_zz_yffs" android:text="押一付三" />
                 </LinearLayout>
             </LinearLayout>
 
-            <LinearLayout android:id="@+id/ll_zjbhfy" style="@style/ll_content_middle_vertical">
+            <LinearLayout android:id="@+id/ll_zz_zjbhfy" style="@style/ll_content_middle_vertical">
                 <TextView android:text="租金包含费用" style="@style/tv_content_middle_vertical_text" />
-                <TextView android:id="@+id/tv_zjbhfy" android:text="请填写" style="@style/tv_content_middle_vertical_value" />
+                <TextView android:id="@+id/tv_zz_zjbhfy" android:text="请填写" style="@style/tv_content_middle_vertical_value" />
             </LinearLayout>
 
             <LinearLayout style="@style/ll_content_middle_split">
@@ -100,20 +100,20 @@
             </LinearLayout>
 
             <LinearLayout style="@style/ll_content_middle_horizontal" android:layout_height="60dp">
-                <LinearLayout android:id="@+id/ll_lxrmc" style="@style/ll_content_middle_vertical" android:layout_width="204dp" android:layout_height="60dp">
-                    <EditText android:id="@+id/et_lxrmc" style="@style/tv_content_middle_vertical_value" android:hint="请填写姓名" />
+                <LinearLayout android:id="@+id/ll_zz_lxrmc" style="@style/ll_content_middle_vertical" android:layout_width="204dp" android:layout_height="60dp">
+                    <EditText android:id="@+id/et_zz_lxrmc" style="@style/tv_content_middle_vertical_value" android:hint="请填写姓名" />
                 </LinearLayout>
                 <LinearLayout style="@style/ll_content_middle_vertical_split">
 
                 </LinearLayout>
-                <LinearLayout android:id="@+id/ll_lxrsf" style="@style/ll_content_middle_vertical" android:layout_width="204dp" android:layout_height="60dp">
-                    <TextView android:id="@+id/tv_lxrsf" style="@style/tv_content_middle_vertical_value" android:text="请选择身份" />
+                <LinearLayout android:id="@+id/ll_zz_lxrsf" style="@style/ll_content_middle_vertical" android:layout_width="204dp" android:layout_height="60dp">
+                    <TextView android:id="@+id/tv_zz_lxrsf" style="@style/tv_content_middle_vertical_value" android:text="请选择身份" />
                 </LinearLayout>
             </LinearLayout>
 
-            <LinearLayout android:id="@+id/ll_lxrlxdh" style="@style/ll_content_middle_vertical">
+            <LinearLayout android:id="@+id/ll_zz_lxrlxdh" style="@style/ll_content_middle_vertical">
                 <TextView style="@style/tv_content_middle_vertical_text" android:text="为保护隐私，您的真实号码将被隐藏" />
-                <TextView android:id="@+id/tv_lxrlxdh" style="@style/tv_content_middle_vertical_value" android:text="请填写手机号" />
+                <TextView android:id="@+id/tv_zz_lxrlxdh" style="@style/tv_content_middle_vertical_value" android:text="请填写手机号" />
             </LinearLayout>
 
         </LinearLayout>
