--- a/android_app/app/src/main/res/layout/fbxx/layout/fb_fc_zz.xml
+++ b/android_app/app/src/main/res/layout/fbxx/layout/fb_fc_zz.xml
@@ -120,4 +120,8 @@
 
     </ScrollView>
 
+    <LinearLayout style="@style/ll_dbcd_nextstep">
+        <TextView android:id="@+id/tv_dbcd_nextstep" style="@style/tv_dbcd_nextstep" android:text="下一步" />
+    </LinearLayout>
+
 </LinearLayout>
