--- a/android_app/app/src/main/res/layout/fbxx/fc/layout/fb_fc_fwms.xml
+++ b/android_app/app/src/main/res/layout/fbxx/fc/layout/fb_fc_fwms.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout android:id="@+id/fb2" xmlns:android="http://schemas.android.com/apk/res/android" style="@style/ll_fb_root">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" style="@style/ll_fb_root">
 
     <ScrollView android:id="@+id/sv_channel" style="@style/sv_fb_main">
 
